--- a/Catalan.lng
+++ b/Catalan.lng
@@ -531,6 +531,7 @@
 |Save the database now in order to get the new key applied.||Deseu ara la base de dades per a que la nova clau tingui efecte.|
 |Saving database...||Desant la base de dades...|
 |Se&lect All||Se&lecciona-ho tot|
+|Search for passwords in quick searches||Cerca contrasenyes en les cerques ràpides|
 |Search in||Cerca a|
 |Search Results||Resultats de la cerca|
 |Search...||Cerca...|
