--- a/Chinese_Simplified.lng
+++ b/Chinese_Simplified.lng
@@ -1,4 +1,4 @@
-﻿2017-12-28 01:35
+﻿2018-11-08 01:36
 |~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
@@ -919,6 +919,8 @@
 |使用不同于默认（后台窗口）的自动输入模式（最小化窗口）|
 |Quick search (toolbar)|
 |快速查找（工具栏）|
+|Search for passwords in quick searches|
+|在快速查找中搜寻密码|
 |Include backup entries in quick searches|
 |快速查找时包含备份记录|
 |Include expired entries in quick searches|
